@@ -719,7 +719,9 @@ static const OptionInfo
     { "CopyRed", (ssize_t) CopyRedCompositeOp, MagickFalse },
     { "CopyYellow", (ssize_t) CopyYellowCompositeOp, MagickFalse },
     { "Darken", (ssize_t) DarkenCompositeOp, MagickFalse },
-    { "Divide", (ssize_t) DivideCompositeOp, MagickFalse },
+    { "Divide", (ssize_t) DivideDstCompositeOp, MagickFalse },
+    { "DivideDst", (ssize_t) DivideDstCompositeOp, MagickFalse },
+    { "DivideSrc", (ssize_t) DivideSrcCompositeOp, MagickFalse },
     { "Dst", (ssize_t) DstCompositeOp, MagickFalse },
     { "Difference", (ssize_t) DifferenceCompositeOp, MagickFalse },
     { "Displace", (ssize_t) DisplaceCompositeOp, MagickFalse },
@@ -740,7 +742,9 @@ static const OptionInfo
     { "LinearLight", (ssize_t) LinearLightCompositeOp, MagickFalse },
     { "Luminize", (ssize_t) LuminizeCompositeOp, MagickFalse },
     { "Mathematics", (ssize_t) MathematicsCompositeOp, MagickFalse },
-    { "Minus", (ssize_t) MinusCompositeOp, MagickFalse },
+    { "Minus", (ssize_t) MinusDstCompositeOp, MagickFalse },
+    { "MinusDst", (ssize_t) MinusDstCompositeOp, MagickFalse },
+    { "MinusSrc", (ssize_t) MinusSrcCompositeOp, MagickFalse },
     { "Modulate", (ssize_t) ModulateCompositeOp, MagickFalse },
     { "ModulusAdd", (ssize_t) ModulusAddCompositeOp, MagickFalse },
     { "ModulusSubtract", (ssize_t) ModulusSubtractCompositeOp, MagickFalse },
